k8s-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskflow-frontend
  template:
    metadata:
      labels:
        app: taskflow-frontend
    spec:
      containers:
        - name: frontend
          image: 226680475141.dkr.ecr.us-east-2.amazonaws.com/taskflow-frontend:v0.1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              preference:
                matchExpressions:
                  - key: capacity-type
                    operator: In
                    values:
                      - spot
---
apiVersion: v1
kind: Service
metadata:
  name: taskflow-frontend-service
  namespace: default
spec:
  selector:
    app: taskflow-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
